--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,12 +7,14 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
     padding: 50px;
 }
 .produto{
     display: flex;
     flex-direction: column;
     gap: 10px;
+    padding: 25px;
 }
 .imagem-produto{
     width: 250px;
